--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -10,9 +10,8 @@ concurrency:
   cancel-in-progress: true
 jobs:
   contracts-build:
-    env:
-      RUSTFLAGS: -D warnings
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -27,9 +26,8 @@ jobs:
         run: |
           forge build
   contracts-lint:
-    env:
-      RUSTFLAGS: -D warnings
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -44,7 +42,8 @@ jobs:
         run: |
           forge fmt --check
   contracts-test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -65,6 +64,7 @@ jobs:
       - contracts-lint
       - contracts-test
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
