--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -15,9 +15,8 @@ env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
 jobs:
   node-build:
-    env:
-      RUSTFLAGS: -D warnings
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -33,9 +32,8 @@ jobs:
         run: |
           pnpm run build
   node-lint:
-    env:
-      RUSTFLAGS: -D warnings
     runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -51,7 +49,8 @@ jobs:
         run: |
           pnpm run lint
   node-test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -73,6 +72,7 @@ jobs:
       - node-lint
       - node-test
     runs-on: ubuntu-latest
+    timeout-minutes: 3
     steps:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
