chore: ini android turbo

--- a/android/package.json
+++ b/android/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@lightdotso/android",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "scripts": {
+    "build": "echo 'Empty build script'"
+  }
 }
