--- a/android/package.json
+++ b/android/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "echo 'Empty build script'"
+    "build": "echo 'Empty build script for turborepo trigger'"
   }
 }
