chore: ini cargo lock

--- a/android/turbo.json
+++ b/android/turbo.json
@@ -9,9 +9,12 @@
         "../crates/**",
         "../gradle/**",
         "../build.gradle",
+        "../Cargo.lock",
         "../Cargo.toml",
         "../gradlew",
         "../gradle.properties",
+        "../rust-toolchain.toml",
+        "../rustfmt.toml",
         "../settings.gradle"
       ],
       "outputs": ["build/**"]
