--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
-  - "android/*"
+  - "android"
   - "apps/*"
   - "configurations/*"
-  - "ios/*"
+  - "contracts"
+  - "ios"
   - "packages/*"
