--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -75,17 +75,18 @@ jobs:
       - name: Gradle Test
         run: |
           ./gradlew test
-      - name: Status Action
-        if: failure()
-        uses: Sibz/github-status-action@v1
-        with:
-          authToken: ${{ secrets.GITHUB_TOKEN }}
-          sha: ${{ github.event.pull_request.head.sha || github.sha }}
-          context: 'android-check'
-          state: 'failure'
+      # - name: Status Action
+      #   if: failure()
+      #   uses: Sibz/github-status-action@v1
+      #   with:
+      #     authToken: ${{ secrets.GITHUB_TOKEN }}
+      #     sha: ${{ github.event.pull_request.head.sha || github.sha }}
+      #     context: 'android-check'
+      #     state: 'failure'
   android-check:
     needs:
-      - android-turbo
+      - android-lint
+      - android-test
     if: always()
     runs-on: ubuntu-latest
     timeout-minutes: 3
