--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,8 +11,6 @@ concurrency:
 env:
   RUSTFLAGS: -D warnings
   CARGO_TERM_COLOR: always
-permissions:
-  statuses: write
 jobs:
   android-turbo:
     runs-on: ubuntu-latest
@@ -27,7 +25,7 @@ jobs:
       - name: Turbo
         id: turbo
         run: |
-          npx turbo-ignore @lightdotso/android && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
+          echo "trigger=false" >> "$GITHUB_OUTPUT"
   android-lint:
     needs:
       - android-turbo
