--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -73,14 +73,6 @@ jobs:
       - name: Gradle Test
         run: |
           ./gradlew test
-      # - name: Status Action
-      #   if: failure()
-      #   uses: Sibz/github-status-action@v1
-      #   with:
-      #     authToken: ${{ secrets.GITHUB_TOKEN }}
-      #     sha: ${{ github.event.pull_request.head.sha || github.sha }}
-      #     context: 'android-check'
-      #     state: 'failure'
   android-check:
     needs:
       - android-lint
@@ -92,4 +84,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
+          allowed-skips: android-lint,android-test
           jobs: ${{ toJSON(needs) }}
