--- a/crates/package.json
+++ b/crates/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "@lightdotso/ios",
+  "name": "@lightdotso/rust",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "echo 'Empty build script for turborepo trigger'"
-  },
-  "dependencies": {
-    "@lightdotso/ios": "workspace:*"
   }
 }
