chore: ini crates npm

--- a/ios/turbo.json
+++ b/ios/turbo.json
@@ -13,10 +13,7 @@
         "LightWalletCore/**",
         "LightWalletSafariExtension/**",
         "LightWalletTests/**",
-        "LightWalletUITests/**",
-        "../crates/**",
-        "../Cargo.toml",
-        "../Cargo.lock"
+        "LightWalletUITests/**"
       ],
       "outputs": ["build/**"]
     }
