--- a/ios/package.json
+++ b/ios/package.json
@@ -6,6 +6,6 @@
     "build": "echo 'Empty build script for turborepo trigger'"
   },
   "dependencies": {
-    "@lightdotso/ios": "workspace:*"
+    "@lightdotso/crates": "workspace:*"
   }
 }
