--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Turbo Trigger
         id: turbo
         uses: ./.github/actions/turbo-trigger
+        with:
+          workflow: "@lightdotso/android"
   android-lint:
     needs:
       - android-turbo
