--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -9,9 +9,23 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 jobs:
+  contracts-turbo:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    outputs:
+      trigger: ${{ steps.turbo.outputs.trigger }}
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Turbo Trigger
+        id: turbo
+        uses: ./.github/actions/turbo-trigger
+        with:
+          workspace: "@lightdotso/contracts"
   contracts-build:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    if: needs.contracts-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -28,6 +42,7 @@ jobs:
   contracts-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    if: needs.contracts-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -44,6 +59,7 @@ jobs:
   contracts-test:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    if: needs.contracts-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -69,4 +85,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
+          allowed-skips: contracts-build,contracts-lint,contracts-test
           jobs: ${{ toJSON(needs) }}
