--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
       - android-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
-    if: needs.android-turbo.outputs.trigger == 'true'
+    if: needs.android-turbo.outputs.trigger == true
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -54,7 +54,7 @@ jobs:
       - android-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
-    if: needs.android-turbo.outputs.trigger == 'true'
+    if: needs.android-turbo.outputs.trigger == true
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
