--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,7 +30,7 @@ jobs:
       - android-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
-    if: needs.android-turbo.outputs.trigger == true
+    if: needs.android-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -74,6 +74,7 @@ jobs:
           ./gradlew test
   android-check:
     needs:
+      - android-turbo
       - android-lint
       - android-test
     if: always()
