--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -12,9 +12,23 @@ env:
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
 jobs:
+  extension-turbo:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    outputs:
+      trigger: ${{ steps.turbo.outputs.trigger }}
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Turbo Trigger
+        id: turbo
+        uses: ./.github/actions/turbo-trigger
+        with:
+          workspace: "@lightdotso/extension"
   extension:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    if: needs.extension-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -48,6 +62,7 @@ jobs:
   extension-check:
     if: always()
     needs:
+      - extension-turbo
       - extension
     runs-on: ubuntu-latest
     timeout-minutes: 3
@@ -55,4 +70,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
+          allowed-skips: extension
           jobs: ${{ toJSON(needs) }}
