--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -9,9 +9,23 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 jobs:
+  ios-turbo:
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    outputs:
+      trigger: ${{ steps.turbo.outputs.trigger }}
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+      - name: Turbo Trigger
+        id: turbo
+        uses: ./.github/actions/turbo-trigger
+        with:
+          workspace: "@lightdotso/ios"
   ios-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
+    if: needs.ios-turbo.outputs.trigger == 'true'
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -37,6 +51,7 @@ jobs:
   ios-test:
     runs-on: macos-latest
     timeout-minutes: 90
+    if: needs.ios-turbo.outputs.trigger == 'true'
     env:
       RUSTFLAGS: -D warnings
       CARGO_TERM_COLOR: always
@@ -91,6 +106,7 @@ jobs:
   ios-check:
     if: always()
     needs:
+      - ios-turbo
       - ios-lint
       - ios-test
     runs-on: ubuntu-latest
@@ -99,4 +115,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
+          allowed-skips: ios-lint,ios-test
           jobs: ${{ toJSON(needs) }}
