--- a/fastlane/package.json
+++ b/fastlane/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@lightdotso/android",
+  "name": "@lightdotso/fastlane",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "echo 'Empty build script for turborepo trigger'"
   },
   "dependencies": {
-    "@lightdotso/crates": "workspace:*"
+    "@lightdotso/android": "workspace:*",
+    "@lightdotso/ios": "workspace:*"
   }
 }
