--- a/ios/package.json
+++ b/ios/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "scripts": {
     "build": "echo 'Empty build script for turborepo trigger'"
+  },
+  "dependencies": {
+    "@lightdotso/crates": "workspace:*"
   }
 }
