--- a/.github/actions/turbo-trigger/action.yml
+++ b/.github/actions/turbo-trigger/action.yml
@@ -20,21 +20,15 @@ runs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.base_ref }}
-    - name: Turbo Push
-      if: github.event_name == 'push'
-      id: turbo
-      shell: bash
-      run: |
-        echo "trigger=true" >> "$GITHUB_OUTPUT"
-    - name: Turbo Merge Group
-      if: github.event_name == 'merge_group'
-      id: turbo
-      shell: bash
-      run: |
-        npx turbo-ignore ${{ inputs.workspace }} --fallback ${{ github.merge_group.base_sha }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
     - name: Turbo Pull Request
       if: github.event_name == 'pull_request'
       id: turbo
       shell: bash
       run: |
-        npx turbo-ignore ${{ inputs.workspace }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
+        if [ ${{ github.event_name }} == 'merge_group' ]; then
+          npx turbo-ignore ${{ inputs.workspace }} --fallback ${{ github.merge_group.base_sha }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
+        elif [ ${{ github.event_name }} == 'push' ]; then
+          npx turbo-ignore ${{ inputs.workspace }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
+        else
+          echo "trigger=true" >> "$GITHUB_OUTPUT"
+        fi
