--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -23,6 +23,8 @@ jobs:
         with:
           workspace: "@lightdotso/ios"
   ios-lint:
+    needs:
+      - ios-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
     if: needs.ios-turbo.outputs.trigger == 'true'
@@ -49,6 +51,8 @@ jobs:
         run: |
           swift-format lint --recursive .
   ios-test:
+    needs:
+      - ios-turbo
     runs-on: macos-latest
     timeout-minutes: 90
     if: needs.ios-turbo.outputs.trigger == 'true'
