--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,6 +48,8 @@ jobs:
       RUSTFLAGS: -D warnings
       SCCACHE_GHA_ENABLED: "true"
       RUSTC_WRAPPER: "sccache"
+    needs:
+      - rust-turbo
     runs-on: ${{ matrix.os }}
     timeout-minutes: 90
     if: needs.rust-turbo.outputs.trigger == 'true'
