--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 3
       - name: Turbo Trigger
         id: turbo
         uses: ./.github/actions/turbo-trigger
