--- a/.github/actions/turbo-trigger/action.yml
+++ b/.github/actions/turbo-trigger/action.yml
@@ -10,12 +10,10 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Fetch Head
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 3
-    - name: Turbo
+    - name: Turbo Pull Request
       id: turbo
       shell: bash
       run: |
+        git rev-parse HEAD
+        git log
         npx turbo-ignore ${{ inputs.workspace }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
