--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -22,12 +22,16 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 3
       - name: Turbo Trigger
         id: turbo
         uses: ./.github/actions/turbo-trigger
         with:
           workspace: "@lightdotso/fastlane"
   fastlane-android:
+    needs:
+      - fastlane-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
     if: needs.fastlane-turbo.outputs.trigger == 'true'
@@ -68,6 +72,8 @@ jobs:
         env:
           GH_NUMBER: ${{ github.event.pull_request.number }}
   fastlane-ios:
+    needs:
+      - fastlane-turbo
     runs-on: macos-latest
     timeout-minutes: 90
     if: needs.fastlane-turbo.outputs.trigger == 'true'
