--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -20,12 +20,16 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 3
       - name: Turbo Trigger
         id: turbo
         uses: ./.github/actions/turbo-trigger
         with:
           workspace: "@lightdotso/extension"
   extension:
+    needs:
+      - extension-turbo
     runs-on: ubuntu-latest
     timeout-minutes: 90
     if: needs.extension-turbo.outputs.trigger == 'true'
