--- a/.github/actions/turbo-trigger/action.yml
+++ b/.github/actions/turbo-trigger/action.yml
@@ -17,3 +17,5 @@ runs:
         git rev-parse HEAD
         git log
         npx turbo-ignore ${{ inputs.workspace }} && echo "trigger=false" >> "$GITHUB_OUTPUT" || echo "trigger=true" >> "$GITHUB_OUTPUT"
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
