--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.1",
     "@commitlint/config-conventional": "^17.6.6",
     "@release-it/keep-a-changelog": "^3.1.0",
