--- a/turbo.json
+++ b/turbo.json
@@ -2,9 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "env": ["DISABLE_EXTRACTION", "NODE_ENV", "EAS_BUILD_PLATFORM"],
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**", "build/**", "node_modules/.cache/metro/**"]
+      "dependsOn": ["^build"]
     },
     "lint": {},
     "dev": {
@@ -12,9 +10,7 @@
       "persistent": true
     },
     "//#ci": {
-      "dependsOn": [],
-      "outputs": [],
-      "inputs": ["**"]
+      "cache": false
     }
   }
 }
