--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,12 +6,25 @@ on:
       - edited
       - synchronize
 jobs:
-  pr:
+  pr-lint:
     name: PR
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
       - name: PR Validate
         uses: wallet-rs/wallet-rs/.github/actions/pr-validate@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+  pr-check:
+    if: always()
+    needs:
+      - pr-lint
+    runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - name: Check All Green
+        uses: re-actors/alls-green@release/v1
+        with:
+          jobs: ${{ toJSON(needs) }}
