chore: ini ios turbo

--- a/android/turbo.json
+++ b/android/turbo.json
@@ -5,12 +5,16 @@
     "build": {
       "cache": false,
       "inputs": [
-        "src/**",
         "../gradle/**",
         "../build.gradle",
-        "../gradlew",
         "../gradle.properties",
-        "../settings.gradle"
+        "../gradlew",
+        "../gradlew.bat",
+        "../Makefile",
+        "../settings.gradle",
+        "./build.gradle",
+        "./proguard-rules.pro",
+        "src/**"
       ],
       "outputs": ["build/**"]
     }
